--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ db.sqlite3
 media
 .vscode/
 client/node_modules
+assets/
+webpack-stats*.json
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
