--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "date-fns": "^1.29.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -30,6 +31,8 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "material-ui": "^1.0.0-beta.43",
+    "moment": "^2.22.1",
+    "moment-duration-format": "^2.2.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
