--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "raf": "3.4.0",
     "ramda": "^0.25.0",
     "react": "^16.3.1",
+    "react-datetime": "^2.14.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
