Localized sprint times on load; fixed label visuals; fixed autosuggest by pulling project value from the store; fixed project dropdown

--- a/client/package.json
+++ b/client/package.json
@@ -30,19 +30,21 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "material-ui": "^1.0.0-beta.44",
+    "jstz": "^2.0.0",
+    "material-ui": "^1.0.0-beta.47",
     "moment": "^2.22.1",
     "moment-duration-format": "^2.2.2",
+    "moment-timezone": "^0.5.16",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
-    "react": "^16.3.1",
+    "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
