--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,12 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-format": "^1.3.0",
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
+    "d3-time-format": "^2.1.1",
     "date-fns": "^1.29.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
