--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-format": "^1.3.0",
+    "d3-interpolate": "^1.2.0",
     "d3-scale": "^2.0.0",
     "d3-selection": "^1.3.0",
     "d3-time-format": "^2.1.1",
