--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "d3-format": "^1.3.0",
     "d3-interpolate": "^1.2.0",
     "d3-scale": "^2.0.0",
+    "d3-scale-chromatic": "^1.3.0",
     "d3-selection": "^1.3.0",
+    "d3-shape": "^1.2.0",
     "d3-time-format": "^2.1.1",
     "date-fns": "^1.29.0",
     "dotenv": "4.0.0",
