--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ media
 client/node_modules
 assets/
 webpack-stats*.json
+temporalite/
+
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
