--- a/client/src/.eslintrc
+++ b/client/src/.eslintrc
@@ -2,6 +2,7 @@
     "parser": "babel-eslint",
     "extends" : "airbnb",
     "rules": {
-        "camelcase": "off"
+        "camelcase": "off",
+        "react/forbid-prop-types": "off"
     }
 }
