--- a/client/src/.prettierrc
+++ b/client/src/.prettierrc
@@ -5,7 +5,7 @@
             "options": {
                 "singleQuote": true,
                 "trailingComma": "all",
-                "arrowParens": "always"
+                "arrowParens": "avoid"
             }
         }
     ]
