--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
+    "react-color": "^2.14.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
