--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -39,9 +39,9 @@
     "jest": "20.0.4",
     "jstz": "^2.0.0",
     "material-ui": "^1.0.0-beta.47",
-    "moment": "^2.22.1",
+    "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
-    "moment-timezone": "^0.5.16",
+    "moment-timezone": "^0.5.17",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -49,16 +49,16 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
-    "react": "^16.3.2",
+    "react": "^16.4.0",
     "react-autosuggest": "^9.3.4",
     "react-color": "^2.14.1",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -75,9 +75,9 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.9.1",
     "webpack-bundle-tracker": "^0.3.0"
   },
   "jest": {
