--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ assets/
 client/webpack-stats.dev.json
 webpack-stats.json
 temporalite/
+Plan.md
 
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
