--- a/client/package.json
+++ b/client/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.9.1",
+    "react-test-renderer": "^16.4.1",
     "webpack-bundle-tracker": "^0.3.0"
   },
   "jest": {
