--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,6 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
     "jstz": "^2.0.0",
     "material-ui": "^1.0.0-beta.47",
     "moment": "^2.22.2",
@@ -78,6 +77,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.9.1",
+    "jest": "^20.0.4",
     "react-test-renderer": "^16.4.2",
     "webpack-bundle-tracker": "^0.3.0"
   },
@@ -88,6 +88,7 @@
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
+    "setupTestFrameworkScriptFile": "<rootDir>/localStorageMock.js",
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
