--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       install:
         - pip install -r requirements.txt
       before_script:
-        - psql -c 'create database test_db;' -U postgres
+        - psql -c 'create database test_dbTreating warnings as errors because process.env.CI = true.;' -U postgres
       script:
         - python manage.py test
     - language: node_js
@@ -22,7 +22,7 @@ matrix:
         - cd client
       install:
         - npm install
-        - npm run build
+        - CI=false npm run build
       script:
         - nohup npm run start &
         - sleep 3
