--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       install:
         - pip install -r requirements.txt
       before_script:
-        - psql -c 'create database test_dbTreating warnings as errors because process.env.CI = true.;' -U postgres
+        - psql -c 'create database test_db;' -U postgres
       script:
         - python manage.py test
     - language: node_js
